# Planar-Multibody-Simulator

./: .gitmodules  CMakeLists.txt  LICENSE  Planar-Multibody-Simulator.filters  Planar-Multibody-Simulator.sln  Planar-Multibody-Simulator.vcxproj  Planar-Multibody-Simulator.vcxproj.filters  README.md  buildPMS.sh  bullshit.sh  run_valgrind.sh
.github/workflows/: msbuild.yml
models/: demo.h
scripts/: buildPMS.sh  run_valgrind.sh
src/: Body.cpp  Body.h  Clock.h  Force.h  Joint.cpp  Joint.h  Matrix.cpp  Matrix.h  PMS.h  Sim.cpp  Sim.h  Solver.h  Structs.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  Vect2d.cpp  Vect2d.h  constants.h  log.h  main.cpp
src/app/: Application.cpp  Application.h
src/sim/: Body.cpp  Body.h  Force.cpp  Force.h  ForceGenerator.cpp  ForceGenerator.h  Joint.cpp  Joint.h  Point.cpp  Point.h  Sim.cpp  Sim.h  Solver.cpp  SpringDamper.cpp  SpringDamper.h  System.cpp  System.h  SystemState.cpp  SystemState.h  constants.h
src/utils/: Clock.cpp  Clock.h  Matrix.cpp  Matrix.h  StaticMatrix.h  Utils.cpp  Vect2d.cpp  Vect2d.h  Vector.cpp  Vector.h  log.h
